added error handeling

--- a/public/index.html
+++ b/public/index.html
@@ -64,10 +64,16 @@
                             <button type="button" class="preset-btn" data-url="https://reddit.com/r/programming">Reddit Programming</button>
                         </div>
                     </div>
-                    <button class="scrape-button" id="scrapeButton">
-                        <i class="fas fa-play"></i>
-                        <span>Start Scraping</span>
-                    </button>
+                    <div class="button-group">
+                        <button class="scrape-button" id="scrapeButton">
+                            <i class="fas fa-play"></i>
+                            <span>Start Scraping</span>
+                        </button>
+                        <button class="hacking-analysis-button" id="hackingAnalysisButton" disabled>
+                            <i class="fas fa-shield-alt"></i>
+                            <span>Analyze for Hacking Content</span>
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Progress Section -->
